# finsight-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-tests.yml  evals.yml  frontend-pages.yml  lint.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: instructions.py  provenance.py  response_validator.py  root_agent.py  session_manager.py
backend/app/api/: audit.py  chat.py  health.py  personas.py  snapshot.py
backend/app/mcp/: __init__.py  fi_client.py  local_transport.py  persona_mapping.py  tool_trace.py
backend/app/schemas/: audit.py  chat.py  finance.py
backend/app/services/: affordability.py  audit_logger.py  export_service.py  risk_scoring.py
backend/tests/: test_affordability.py  test_api_surface.py  test_benign_false_positive.py  test_config.py  test_health.py  test_mcp_layer.py  test_provenance.py  test_response_validator.py  test_risk_scoring.py
docs/: adk-agent-design.md  architecture.md  deployment.md  evaluation.md  fi-mcp-integration.md  portfolio-case-study.md  safety.md
evals/: README.md  benign_queries.jsonl  expected_tool_calls.jsonl  prompt_injection_tests.jsonl  rubric.md  run_evals.py  test_queries.jsonl
frontend/: .deploy-trigger  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
portfolio/: cv-bullets.md  demo-script.md  interview-qa.md  linkedin-post.md
(+13 files in other folders)
