[project]
name = "finsight-agent-backend"
version = "0.0.1"
description = "FinSight Agent backend: FastAPI + Google ADK agent over Fi MCP Dev."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core dependencies confirmed safe for the scaffold. Agent/MCP/Vertex deps are
# added when their issues land (see comments) to avoid pinning unverified versions.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # --- added in later issues (verify exact names/versions before pinning) ---
    # "google-adk>=1.8.0",            # Google Agent Development Kit (Issue #6)
    # "mcp",                          # MCP Python client (Issue #5)
    # "google-cloud-aiplatform",      # Vertex AI (Issue #6 / deployment)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
